<resources>
    <string name="app_name">DML APP Kotlin</string>
    <string name="no_internet">No internet Connection</string>
    <string name="internet_msg">Please turn on internet connection to continue</string>
    <string name="close">close</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_an_account">Create an account</string>
    <string name="pls_enter_email_or_phone">Please enter email or phone.</string>
    <string name="pls_enter_password">Please enter password.</string>
    <string name="title_activity_home">HomeAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_referral">Create Referral</string>
    <string name="name">Name</string>
    <string name="discount">Discount</string>
    <string name="action">Action</string>
    <string name="manage_referral">Manage Referral</string>
    <string name="transaction">Transaction</string>
    <string name="order">Order</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign out</string>
    <string name="view_all">View All</string>
    <string name="download_all">Download All</string>
    <string name="delete_all">Delete All</string>


    <string-array name="discount">
        <item>Select discount</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
