<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup_signin.SignInAct">

    <!-- <ImageView
             android:layout_width="@dimen/zero_dp"
             android:layout_height="@dimen/zero_dp"
             android:src="@drawable/background_image"
             android:id="@+id/myImageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="fitXY"
     />-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword"
            android:layout_marginBottom="@dimen/sixteen_dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/tilFnm">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_phone"
                style="@style/MyTextInputEditText"
                android:lines="1"
                android:inputType="text|textEmailAddress"
                android:id="@+id/edFnm"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/colorLight"
                android:lines="1"
                android:inputType="numberPassword"
                android:id="@+id/edPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="@dimen/sixteen_dp"
            app:layout_constraintTop_toBottomOf="@+id/cbRememberPwd"
            android:id="@+id/btnSignIn"/>

    <ImageView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_white"
            android:id="@+id/imageView"
            android:tint="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/sixteen_dp"
            app:layout_constraintBottom_toTopOf="@+id/tilFnm"
            android:layout_marginEnd="@dimen/eight_dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginStart="@dimen/eight_dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:scaleType="fitCenter"
            android:adjustViewBounds="false" android:cropToPadding="false" tools:ignore="ContentDescription"/>

    <CheckBox
            android:text="@string/remember_password"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:id="@+id/cbRememberPwd"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            android:layout_marginTop="@dimen/eight_dp"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:text="@string/forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPwd"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/view"
            android:layout_marginEnd="@dimen/eight_dp"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:text="@string/create_an_account"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCreateAccount"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/view"
            android:layout_marginStart="@dimen/eight_dp"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"/>

    <View
            android:layout_width="1dp"
            android:layout_height="@dimen/twenty_dp"
            android:id="@+id/view" android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/thirty_dp"
            android:id="@+id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_end="@dimen/thirty_dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>